# PSDK-android-game-launcher

./: .gitignore  README.md  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/jni/: CMakeLists.txt  get_activity_parameters.c  jni_psdk.c  jni_psdk.h  jni_ruby_info.c  jni_ruby_info.h
app/src/main/cpp/logging/: logging.c  logging.h
app/src/main/cpp/psdk-script-starter/: CMakeLists.txt  psdk.c  psdk.h
app/src/main/cpp/ruby-vm/: CMakeLists.txt  ruby-vm.c  ruby-vm.h
app/src/main/ext-native-libs/include/ruby/: config.h
app/src/main/java/com/psdk/: AppInstall.java  MainActivity.java  PsdkProcess.java  UnzipUtility.java
app/src/main/res/drawable/: check_mark.xml  edterr.xml  edtnormal.xml
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
app/src/main/ruby/: check_engine.rb  start.rb
gradle/wrapper/: gradle-wrapper.properties
